--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,7 @@
 include LICENCE RELEASE-NOTES AUTHORS
 include README.rst
-include electrum.conf.sample
-include electrum.desktop
+include electrum-gold.conf.sample
+include electrum-gold.desktop
 include *.py
 include electrum
 include contrib/requirements/requirements.txt
