--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,15 +1,15 @@
-name: electrum
+name: electrum-gold
 version: master
-summary: Bitcoin thin client
+summary: BitcoinGold thin client
 description: |
-  Lightweight Bitcoin client
+  Lightweight BitcoinGold client
 
 grade: devel # must be 'stable' to release into candidate/stable channels
 confinement: strict
 
 apps:
   electrum:
-    command: desktop-launch electrum
+    command: desktop-launch electrum-gold
     plugs: [network, network-bind, x11, unity7]
 
 parts:
