--- a/electrumg.conf.sample
+++ b/electrumg.conf.sample
@@ -1,10 +1,10 @@
 # Configuration file for the electrum client
 # Settings defined here are shared across wallets
 #
-# copy this file to /etc/electrum-gold.conf if you want read-only settings
+# copy this file to /etc/electrumg.conf if you want read-only settings
 
 [client]
-server = electrum-gold.novit.ro:50001:t
+server = electrumg.novit.ro:50001:t
 proxy = None
 gap_limit = 5
 # booleans use python syntax
