Followup upstream merge

--- a/electrumg.desktop
+++ b/electrumg.desktop
@@ -1,10 +1,9 @@
-# If you want electrum to appear in a linux app launcher ("start menu"), install this by doing:
+# If you want ElectrumG to appear in a Linux app launcher ("start menu"), install this by doing:
 # sudo desktop-file-install electrumg.desktop
 
 [Desktop Entry]
 Comment=Lightweight BitcoinGold Client
-Exec=sh -c 'PATH="$HOME/.local/bin:$PATH" electrumg %u'
-Exec=electrumg %u
+Exec=sh -c "PATH=\"\\$HOME/.local/bin:\\$PATH\" electrumg %u'
 GenericName[en_US]=BitcoinGold Wallet
 GenericName=BitcoinGold Wallet
 Icon=electrumg
@@ -18,5 +17,5 @@ MimeType=x-scheme-handler/bitcoingold;
 Actions=Testnet;
 
 [Desktop Action Testnet]
-Exec=sh -c 'PATH="$HOME/.local/bin:$PATH" electrumg --testnet %u'
+Exec=sh -c "PATH=\"\\$HOME/.local/bin:\\$PATH\" electrumg --testnet %u'
 Name=Testnet mode
